Fix overflow issue on dashboard
[Finished #41921279]

--- a/app/assets/stylesheets/_build.scss
+++ b/app/assets/stylesheets/_build.scss
@@ -66,6 +66,7 @@ article.build {
         font-size: 30px;
         float: left;
         padding: 0px 16px;
+        min-width: 62px;
       }
 
       ol {
@@ -75,7 +76,7 @@ article.build {
           font-size: 50px;
           height: 45px;
           width: 45px;
-          margin: 14px 7px 7px 0px;
+          margin: 14px 5px 7px 0px;
           line-height: 45px;
         }
       }
